# brotviz

./: .doc-manifest.yaml  .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  Makefile  README.md  TODO.md  agent.md  alpha-tool-test.txt  build.rs  research-visual-algorithms-2026-02-14.md
.cargo/: config.toml
assets/graph/: fractal-descent.graph  narrative-arc.graph  percussive-cutup.graph
assets/samples/: README.md  yankee_doodle_choral.lrc
assets/theme/: fractal-infinite-dive.theme  lowlight-ambient.theme  percussive-glitch-punch.theme  psychedelic-journey.theme
docs/: ARCHITECTURE.md  USAGE.md  testing.md
docs/implementation/: MASTER_PLAN_2026-02-15.md  TRACKER.md
research/: research-psychedelic-presets-transitions-2026-02-14.md  research-terminal-audioreactive-tui-2026-02-14.md  research-terminal-rendering-methods-2026-02-15.md  research-typography-terminal-2026-02-16.md  study-audio-intelligence-2026-02-15.md  study-camera-transition-2026-02-15.md  study-capability-performance-2026-02-15.md  study-fractal-zoom-2026-02-15.md  study-postfx-geometry-2026-02-15.md  study-preset-graph-themepacks-2026-02-15.md  study-recorder-export-2026-02-15.md  study-typography-layer-2026-02-15.md
src/: app.rs  audio.rs  capability.rs  config.rs  control_matrix.rs  lib.rs  lyrics.rs  main.rs  prefs.rs  preset_graph.rs  system_data.rs  terminal.rs  theme_pack.rs  typography.rs
src/render/: ascii.rs  braille.rs  halfblock.rs  kitty.rs  mod.rs  sextant.rs
src/visual/: metal.rs  mod.rs  (+1 more)
tests/: config_modules_suite.rs  export_suite.rs  presets_suite.rs  render_suite.rs
(+12 files in other folders)
