[package]
name = "tui_visualizer"
version = "0.1.0"
edition = "2024"
build = "build.rs"
default-run = "tui_visualizer"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
cpal = "0.15.3"
crossterm = "0.27.0"
fastrand = "2.1.0"
nix = { version = "0.29.0", features = ["fs", "mman"] }
ringbuf = "0.4.7"
rustfft = "6.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1.5.0", features = ["macos_13_0"] }
metal = "0.33.0"
objc = "0.2.7"

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
strip = "symbols"
